[gd_scene load_steps=6 format=3 uid="uid://cks7mljflhc4j"]

[ext_resource type="Script" uid="uid://c8ybol71a6yp8" path="res://scripts/fruit_particles.gd" id="1_558kj"]
[ext_resource type="Texture2D" uid="uid://tumeyn8ixbqo" path="res://assets/misc/cerchio.png" id="1_opcvt"]
[ext_resource type="Texture2D" uid="uid://bg87l8w5kvyr4" path="res://assets/misc/vecteezy_beautiful-colour-paint-splashes-set-of-paint-splashes_9372330.png" id="2_558kj"]

[sub_resource type="Curve" id="Curve_4uq3x"]
_data = [Vector2(0.16455695, 1), 0.0, 0.0, 0, 0, Vector2(0.83966243, 0.6966293), -1.8435609, -1.8435609, 0, 0, Vector2(0.9915612, 0.28089893), -0.2754746, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_swg00"]
_data = [Vector2(0.8691983, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.6), 0.0, 0.0, 0, 0]
point_count = 2

[node name="FruitParticles" type="Node2D"]
script = ExtResource("1_558kj")

[node name="FruitExplosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
texture = ExtResource("1_opcvt")
lifetime = 0.25
one_shot = true
explosiveness = 0.7
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 69.77
initial_velocity_max = 186.05
angular_velocity_min = -189.77
angular_velocity_max = 680.93
scale_amount_min = 0.15
scale_amount_max = 0.15
scale_amount_curve = SubResource("Curve_4uq3x")

[node name="FruitSketch" type="CPUParticles2D" parent="."]
position = Vector2(0, 168)
emitting = false
amount = 1
texture = ExtResource("2_558kj")
one_shot = true
gravity = Vector2(0, 0)
scale_amount_min = 0.01
scale_amount_max = 0.01
scale_amount_curve = SubResource("Curve_swg00")

[connection signal="finished" from="FruitExplosion" to="." method="_on_fruit_explosion_finished"]
[connection signal="finished" from="FruitSketch" to="." method="_on_fruit_sketch_finished"]
